@@ -443,11 +443,7 @@ SQLRETURN SQLSetConnectAttrW( SQLHDBC connection_handle,
       	case SQL_ATTR_RETRIEVE_DATA:
       	case SQL_ATTR_SIMULATE_CURSOR:
       	case SQL_ATTR_USE_BOOKMARKS:
-            if( __check_stmt_from_dbc( connection, STATE_S8 ) ||
-                __check_stmt_from_dbc( connection, STATE_S9 ) ||
-                __check_stmt_from_dbc( connection, STATE_S10 ) ||
-                __check_stmt_from_dbc( connection, STATE_S11 ) ||
-                __check_stmt_from_dbc( connection, STATE_S12 )) {
+            if( __check_stmt_from_dbc_v( connection, 5, STATE_S8, STATE_S9, STATE_S10, STATE_S11, STATE_S12 )) {
 
                 dm_log_write( __FILE__, 
                         __LINE__, 
@@ -466,9 +462,7 @@ SQLRETURN SQLSetConnectAttrW( SQLHDBC connection_handle,
         default:
             if ( attribute == SQL_ATTR_CURRENT_CATALOG ) 
             {
-                if( __check_stmt_from_dbc( connection, STATE_S5 ) ||
-                    __check_stmt_from_dbc( connection, STATE_S6 ) ||
-                    __check_stmt_from_dbc( connection, STATE_S7 )) {
+                if( __check_stmt_from_dbc_v( connection, 3, STATE_S5, STATE_S6, STATE_S7 )) {
 
                     dm_log_write( __FILE__, 
                             __LINE__, 
@@ -484,11 +478,7 @@ SQLRETURN SQLSetConnectAttrW( SQLHDBC connection_handle,
                 }
             }
 
-            if( __check_stmt_from_dbc( connection, STATE_S8 ) ||
-                __check_stmt_from_dbc( connection, STATE_S9 ) ||
-                __check_stmt_from_dbc( connection, STATE_S10 ) ||
-                __check_stmt_from_dbc( connection, STATE_S11 ) ||
-                __check_stmt_from_dbc( connection, STATE_S12 )) {
+            if( __check_stmt_from_dbc_v( connection, 5, STATE_S8, STATE_S9, STATE_S10, STATE_S11, STATE_S12 )) {
 
                 dm_log_write( __FILE__, 
                         __LINE__, 
